# test2

./: .gitignore  README.md  hello.js  package-lock.json  package.json  python.py
A_code/test_damiao_motor_angle/MDK-ARM/: startup_stm32f427xx.lst  startup_stm32f427xx.s  test_feedback.uvguix.HP  test_feedback.uvoptx  test_feedback.uvprojx
A_code/test_damiao_motor_angle/User/: drv_uart.c  drv_uart.h
C_code/final/: .mxproject  final.ioc
C_code/final/Inc/: check_rubbish.h  main.h  referee_system.h  stm32f4xx_it.h  tim.h  usart.h
C_code/final/MDK-ARM/: final.uvguix.HP  final.uvoptx  final.uvprojx  startup_stm32f407xx.lst
C_code/final/Src/: check_rubbish.c  gpio.c  main.c  referee_system.c  stm32f4xx_it.c  tim.c  usart.c
assets/: graph.html  index.html  sub.html
assets/code/project/: main.cpp
assets/code/queue_for_mcu/: queue.h  queue.h.v2.0
assets/css/: index.css
assets/js/api/: helper.js  mxtool.js  offboardlink.js  protocol.js
assets/js/no_gui/: protocol_nogui.js
assets/js/station/: about_panel.js  device_panel.js  panel.js  project_panel.js  protocol_panel.js  robot_panel.js  standard_panel.js  system.js  view.js
assets/js/tools/: common_utils.js  string_mcu.js
assets/js/user_api/: common.js
assets/model/: fc.glb
data/logs/: AmmoDebug-2024-03-30-19-36-32.csv  Heartbeat-2024-02-22-11-01-54.csv  Heartbeat-2024-02-22-11-03-44.csv  IMUData-2024-01-07-09-52-02.csv  IMUData-2024-01-11-02-19-19.csv  IMUData-2024-01-13-20-07-22.csv  IMUData-2024-01-13-20-44-51.csv  IMUData-2024-02-22-10-54-46.csv  IMUData-2024-02-22-10-57-46.csv  IMUData-2024-02-22-11-01-54.csv  IMUData-2024-02-22-11-03-44.csv
data/mcu/: MessageBase.h
data/mcu/msgs/: AmmoDebug.h  ChassisPowerData.h  ChassisStrategy.h  DecisionDaemon.h  GimbalSingleAimShootCommand.h  Heartbeat.h  HeartbeatReply.h  MinipcHeartbeat.h  PathVisualize.h  ReferenceDataChassis.h  (+4 more)
data/msgs/: AmmoDebug.json  AutoAimInfo.json  ChassisPowerData.json  ChassisStrategy.json  ChassisVelCommand.json  ChassisVelYawRateCommand.json  CommandData.json  DecisionDaemon.json  GimbalConstantAimShootCommand.json  GimbalPIDDebug.json  GimbalSingleAimShootCommand.json  Heartbeat.json  HeartbeatReply.json  IMUData.json  MinipcHeartbeat.json  PathVisualize.json  ReferenceDataMini.json  ReferenceDataSuper.json  RobotAroundInformation.json  ShootDebug.json  Target.json  TargetWithId.json
data/ros2/ros2-robo-bridge/: CMakeLists.txt  package.xml
data/ros2/ros2-robo-bridge/include/robo_bridge/: OffboardLink.h
data/ros2/ros2-robo-bridge/include/robo_bridge/msgs/: AutoAimInfo.h  ChassisVelCommand.h  ChassisVelYawRateCommand.h  CommandData.h  GimbalConstantAimShootCommand.h  GimbalPIDDebug.h  IMUData.h  ReferenceDataMini.h  Target.h
data/ros2/ros2-robo-utils/: CMakeLists.txt  package.xml
data/ros2/ros2-robo-utils/msg/: AmmoDebug.msg  Armor.msg  AutoAimInfo.msg  ChassisStrategy.msg  ChassisVelCommand.msg  ChassisVelYawRateCommand.msg  CommandData.msg  DetectorObject.msg  DetectorObjects.msg  GimbalConstantAimShootCommand.msg  GimbalPIDDebug.msg  GimbalSingleAimShootCommand.msg  Heartbeat.msg  HeartbeatReply.msg  ImageReproject.msg  ImageReprojectPack.msg  MinipcHeartbeat.msg  ReferenceDataMini.msg  Robot.msg  RobotAroundInformation.msg  Robots.msg  ShootDebug.msg  Target.msg
src/: main.js
(+168 files in other folders)
